# ChangeLog for app-text/poppler-utils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler-utils/ChangeLog,v 1.3 2009/04/19 18:17:43 loki_val Exp $

  19 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  -poppler-utils-0.10.5.ebuild:
  Punt for bug 266775

*poppler-utils-0.10.6 (16 Apr 2009)

  16 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-utils-0.10.6.ebuild:
  Bump

*poppler-utils-0.10.5 (01 Apr 2009)

  01 Apr 2009; Peter Alfredsen <loki_val@gentoo.org> +metadata.xml,
  +poppler-utils-0.10.5.ebuild:
  Add app-text/poppler-utils w.r.t. bug 264230
