@@ -1,5 +1,7 @@
 AUX poppler-utils-0.10.6-darwin-abiword-libxml2.patch 873 RMD160 f535efb711c20202d5bd5bcba7ef10592d56e585 SHA1 11ad656d703c769d220e47981675da96cad0d1c2 SHA256 2a150a261d1d3ad76c815982f543cacef38a906244ffe4f0a2da7b25242eb665
 DIST poppler-0.10.6.tar.gz 1527715 RMD160 e4faec8cc22f25a73c1dea054df1d43a364a5e1a SHA1 0bab946444788ee9f21bdfeba6d3d635a618b809 SHA256 bcd78d674c4166af069afdb27af810c012e13cfd2b7b21f9dce63dd3f62bded1
+DIST poppler-0.11.0.tar.gz 1577973 RMD160 b5454f56a5de35b603c531e3da9c3f7504908244 SHA1 b97400a6269634b5e7d41b2e42e6596b1b470655 SHA256 b68f06eccdd64c8662b6cd0dd414aea6eb749d32caba255eca821e487feecb88
 EBUILD poppler-utils-0.10.6.ebuild 767 RMD160 5228519659b48f40cb7de18a84d2f0a2a233cc20 SHA1 d996600fee4eca5474924330ccab0e6048ff26f9 SHA256 f5cdbe47db117a8814a760294a22c8c011a753de2c7d8c1a8533d6c064c02a1a
-MISC ChangeLog 642 RMD160 e7cfcffaf5f799c2463c7c25dc89fb890caa57e6 SHA1 047b7a906eca93ade3f337f602c6070fcbfac296 SHA256 3c53071c46d36ce05a65af9e0add0cb008443ca79aaebc4f84e072881c21bca4
+EBUILD poppler-utils-0.11.0.ebuild 783 RMD160 e5137cd10f7f7c9c3e5f536c42d6281b730d23eb SHA1 be2f8ca00a522f7e0679b4414e4313c493e820d9 SHA256 a7d463822ea7c7078e99235ac250c034c0a5fc0b484cf1f1d752c16c9498a8f8
+MISC ChangeLog 791 RMD160 68e96cad2464efc2b6379f6b8e635996035b436d SHA1 808d5b3359688eb51eca1ed602d97521fa879984 SHA256 64817f792086d4c210502f970d3166b93ac6c4cb4269981c06589628c052b5db
 MISC metadata.xml 398 RMD160 e817212455019bd04e46c2295fc15fb63b60b047 SHA1 14d271094706c20c2000ee65db241cf73f7eeff2 SHA256 190ec98d3a9bf867dc0ae45fc747f17ee4e4ab8186dbe5ac7a6c7461d27f0b2e
